--- a/front/index.html
+++ b/front/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Unicase:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>Poivre Store</title>
   </head>
   <body>
     <div id="app"></div>
